--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 #=====Database==========
-DB_URL=mongodb://192.168.8.101:27017
+DB_URL=mongodb://localhost:27017
 DB_NAME=manga_database
-manga_collection=manga_collection
-MONGODB_URI=mongodb://192.168.8.101:27017/manga_database
+MANGA_COLLECTION=manga_collection
 #======================
